--- a/Products/productstylin.css
+++ b/Products/productstylin.css
@@ -18,6 +18,8 @@ body {
     max-width: 100%;
     margin: 0 auto;
     overflow: hidden;
+    display: flex;
+    justify-content: center;
 }
 
 .slides {
@@ -27,10 +29,9 @@ body {
 
 .carousel img {
     max-width: 500px;
-    /* set a maximum width */
     max-height: 800px;
-    /* set a maximum height */
     border-radius: 10px;
+    object-fit: contain;
 }
 
 /* Navigation dots */
@@ -82,4 +83,12 @@ body {
 
 .catalog-link:hover {
     background-color: #218838;
+}
+
+/* Media query for mobile devices */
+@media only screen and (max-width: 768px) {
+    .carousel img {
+        max-width: 100%;
+        max-height: none;
+    }
 }
